# portfolio-analysis-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  architecture.excalidraw
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3b8f1d24e90_add_user_settings_table.py  c9e846a57614_initial_schema.py  d4f7e2a19b03_add_tax_calculations_table.py  e5c1a7f3b2d8_add_declaration_fields.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  account.py  alert.py  base.py  cache.py  goal.py  holding.py  market_data.py  news.py  strategy.py  symbol_metadata.py  tax_calculation.py  transaction.py  user_settings.py
backend/app/routers/: accounts.py  alerts.py  analysis.py  chat.py  dashboard.py  gate.py  goals.py  holdings.py  kraken.py  market_status.py  news.py  portfolio.py  settings.py  strategy.py  tax_calculations.py  transactions.py  upload.py
backend/app/schemas/: __init__.py  account.py  goal.py  holding.py  portfolio.py  strategy.py  transaction.py
backend/app/services/: alerts.py  analysis.py  capital_income.py  csv_parser.py  declarations.py  dividend_detector.py  dividend_logic.py  fx.py  kraken.py  market_data.py  news_monitor.py  portfolio.py  scheduler.py  symbol_metadata.py  tax.py
backend/app/utils/: finnish_numbers.py
backend/scripts/: __init__.py
backend/tests/: test_capital_income.py  test_csv_parser.py  test_declarations.py  test_dividend_logic.py  test_fx.py  test_holding_period.py  test_tax.py
(+72 files in other folders)
