[project]
name = "portfolio-analysis-agent"
version = "0.1.0"
description = "Personal investment portfolio tracker and analysis agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "yfinance>=0.2",
    "pandas>=2.2",
    "anthropic>=0.40",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "msal>=1.31",
    "pymupdf>=1.24",
    "pyjwt[crypto]>=2.9",
    "feedparser>=6.0",
    "exchange_calendars>=4.5",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
